beatlocker-server/tests/snapshots/integration__getAlbum.json.snap
---
source: beatlocker-server/tests/integration.rs
assertion_line: 158
expression: "res.json::<serde_json::Value>().await"
---
{
  "subsonic-response": {
    "album": {
      "artist": "Alex Gopher",
      "artistId": "c2042f2f-fbda-64e4-ff33-62bad6853d99",
      "duration": 101,
      "id": "20d02390-2687-c407-2d28-d74f9fc6d5a1",
      "name": "Motorway (Original Motion Picture Soundtrack)",
      "song": [
        {
          "album": "Motorway (Original Motion Picture Soundtrack)",
          "albumId": "20d02390-2687-c407-2d28-d74f9fc6d5a1",
          "artist": "Alex Gopher",
          "artistId": "c2042f2f-fbda-64e4-ff33-62bad6853d99",
          "contentType": "audio/ogg",
          "created": "2020-02-02T00:00:00Z",
          "discNumber": 1,
          "duration": 6,
          "genre": "Unknown genre",
          "id": "7b2abff8-3571-99f6-b224-56250315eb14",
          "isDir": false,
          "isVideo": false,
          "parent": "68f8b71b-d9b4-c77e-c7f1-e4af263bcd93",
          "size": 105424,
          "suffix": "ogg",
          "title": "Diamond Dealers",
          "track": 1,
          "year": 2021
        },
        {
          "album": "Motorway (Original Motion Picture Soundtrack)",
          "albumId": "20d02390-2687-c407-2d28-d74f9fc6d5a1",
          "artist": "Alex Gopher",
          "artistId": "c2042f2f-fbda-64e4-ff33-62bad6853d99",
          "contentType": "audio/flac",
          "created": "2020-02-02T00:00:00Z",
          "duration": 95,
          "genre": "Unknown genre",
          "id": "9fe0fb24-dabd-4464-258b-1ab72a28aa94",
          "isDir": false,
          "isVideo": false,
          "parent": "7bb81eaa-b6a7-7f1d-7624-622193088eb6",
          "size": 3502015,
          "suffix": "flac",
          "title": "Radar Unit"
        }
      ],
      "songCount": 2,
      "title": "Motorway (Original Motion Picture Soundtrack)"
    },
    "serverVersion": "unknown",
    "status": "ok",
    "type": "beatlocker",
    "version": "1.16.1"
  }
}
