beatlocker-server/tests/snapshots/integration__getAlbumList.xml.snap
---
source: beatlocker-server/tests/integration.rs
expression: res.xml_string().await
---
<subsonic-response status="ok" version="1.16.1" type="beatlocker" serverVersion="unknown">
  <albumList>
    <album id="832e44af-9d23-c38e-34af-b7f4cf92b096" parent="00000000-0000-0000-0000-000000000000" isDir="true" name="Motorway (Original Motion Picture Soundtrack)" title="Motorway (Original Motion Picture Soundtrack)" songCount="2" duration="12" artist="Alex Gopher" artistId="be74adf7-0dfc-e5c6-e19e-0058776e90d1"/>
    <album id="c9c5e1fd-c67e-a5ae-1af6-8e1bffd27f16" parent="00000000-0000-0000-0000-000000000000" isDir="true" name="Tiki" title="Tiki" songCount="2" duration="12" artist="Richard Bona" artistId="115dddbd-96dd-09c8-0cb6-c373d5c57ff2"/>
  </albumList>
</subsonic-response>
