beatlocker-server/tests/snapshots/integration__getAlbumList2.xml.snap
---
source: beatlocker-server/tests/integration.rs
assertion_line: 102
expression: res.xml_string().await
---
<subsonic-response status="ok" version="1.16.1" type="beatlocker" serverVersion="unknown">
  <albumList2>
    <album id="20d02390-2687-c407-2d28-d74f9fc6d5a1" name="Motorway (Original Motion Picture Soundtrack)" title="Motorway (Original Motion Picture Soundtrack)" songCount="2" duration="101" artist="Alex Gopher" artistId="c2042f2f-fbda-64e4-ff33-62bad6853d99"/>
    <album id="68bc272d-d36b-9191-b815-02627be8ea65" name="Tiki" title="Tiki" songCount="2" duration="33" artist="Richard Bona" artistId="d094e9f8-a8e2-1737-0cfc-c4b24ab0aedf"/>
  </albumList2>
</subsonic-response>
