beatlocker-server/tests/snapshots/integration__getArtist.json.snap
---
source: beatlocker-server/tests/integration.rs
assertion_line: 172
expression: "res.json::<serde_json::Value>().await"
---
{
  "subsonic-response": {
    "artist": {
      "album": [
        {
          "artist": "Richard Bona",
          "artistId": "d094e9f8-a8e2-1737-0cfc-c4b24ab0aedf",
          "duration": 33,
          "id": "68bc272d-d36b-9191-b815-02627be8ea65",
          "name": "Tiki",
          "songCount": 2,
          "title": "Tiki"
        }
      ],
      "albumCount": 1,
      "id": "d094e9f8-a8e2-1737-0cfc-c4b24ab0aedf",
      "name": "Richard Bona",
      "song": [
        {
          "album": "Tiki",
          "albumId": "68bc272d-d36b-9191-b815-02627be8ea65",
          "artist": "Richard Bona",
          "artistId": "d094e9f8-a8e2-1737-0cfc-c4b24ab0aedf",
          "contentType": "audio/mp3",
          "created": "2020-02-02T00:00:00Z",
          "duration": 27,
          "genre": "World Music",
          "id": "72315dd4-d365-8f1e-9cb7-c0c11f680af1",
          "isDir": false,
          "isVideo": false,
          "parent": "75a22ef8-9597-4c55-9be1-097d94babc31",
          "size": 765952,
          "suffix": "mp3",
          "title": "Akwa Samba Yaya",
          "track": 2,
          "year": 2021
        },
        {
          "album": "Tiki",
          "albumId": "68bc272d-d36b-9191-b815-02627be8ea65",
          "artist": "Richard Bona",
          "artistId": "d094e9f8-a8e2-1737-0cfc-c4b24ab0aedf",
          "contentType": "audio/ogg",
          "created": "2020-02-02T00:00:00Z",
          "discNumber": 1,
          "duration": 6,
          "genre": "Unknown genre",
          "id": "1568a84c-22cd-2176-ab86-c69194a9de16",
          "isDir": false,
          "isVideo": false,
          "parent": "75a22ef8-9597-4c55-9be1-097d94babc31",
          "size": 105378,
          "suffix": "ogg",
          "title": "Ba Senge",
          "track": 1,
          "year": 2021
        }
      ]
    },
    "serverVersion": "unknown",
    "status": "ok",
    "type": "beatlocker",
    "version": "1.16.1"
  }
}
